overflow corrected

--- a/style.css
+++ b/style.css
@@ -332,7 +332,7 @@ section img{
 }
 
 .news{
-    margin-left: 350px;
+    margin-left: 98px;
     margin-bottom: 20px;
 }
 
@@ -420,13 +420,13 @@ footer img{
 .f-container1,.f-container2{
     display: flex;
     gap: 90px;
-    margin-left: 200px;
+    margin-left: 50px;
     margin-top: 20px;
     
 }
 
 .f-container2{
-    margin-left: 300px;
+    margin-left: 150px;
     margin-top: 30px;
 }
 
@@ -461,6 +461,7 @@ footer img{
     height: 300px;
     background-color: black;
     margin-top: 30px;
+    
 }
 
 #lc-1-items{
@@ -474,7 +475,7 @@ footer img{
 
 #lc-1{
     padding-top: 50px;
-    padding-left: 500px;
+    padding-left: 300px;
 }
 
 #lc-1 a{
@@ -482,6 +483,10 @@ footer img{
     color: white;
     font-size: large;
     font-weight: bold;
+}
+
+#lc-2{
+    margin-left: -165px;
 }
 
 #hr1{
@@ -519,7 +524,7 @@ footer img{
     color: #7f7f7f;
     text-align: center;
     margin-top: 15px;
-    margin-left: 75px;
+
 
 
 }
